--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple market web app ",
   "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/app.js",
+    "start": "node .src/app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/NicolasD-03/simple-market-app/issues"
   },
-  "homepage": "https://github.com/NicolasD-03/simple-market-app#readme"
+  "homepage": "https://github.com/NicolasD-03/simple-market-app#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
