--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/NicolasD-03/simple-market-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "randomstring": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
